# geometry-handler

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: anomaly.py  lst.py  ndvi.py  plots.py
backend/app/core/: config.py
backend/app/models/: anomaly.py  geojson.py  lst.py  ndvi.py
backend/app/services/: anomaly_service.py  lst_service.py  ndvi_service.py  plot_service.py  stac_service.py
backend/precision_ag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AlertPanel.jsx  AnalyticsPanel.jsx  MapView.jsx
frontend/src/lib/: api.js
