[project]
name = "precision-ag-backend"
version = "0.1.0"
description = "FastAPI geospatial backend for Sentinel-2 NDVI crop health analytics."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "rasterio>=1.3.10",
  "geopandas>=1.0.0",
  "shapely>=2.0.0",
  "pyproj>=3.6.0",
  "pystac-client>=0.8.0",
  "planetary-computer>=1.0.0",
  "mercantile>=1.2.1",
  "numpy>=1.26.0",
  "rio-tiler>=6.6.0",
  "matplotlib>=3.9.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
